--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>VueJS</title>
-    <style href="styles.css" rel="stylesheet"></style>
+    <link href="/styles.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/vue"></script>
   </head>
   <body>
     <div id="app">
-      <input v-bind:value="name" />
+      <input :value="name" />
+      <br/>
+      <button @click="changeName">Change name</button>
       <h1>{{ greet() }}</h1>
+      <div @mousemove="move" id="canvas">
+        {{x}},{{y}}
+      </div>
+      <br/>
     </div>
     <script src="app.js"></script>
   </body>
