--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         {{x}},{{y}}
       </div>
       <br/>
+      <a href="https://google.co.in" @click.prevent="clicked">Google</a>
     </div>
     <script src="app.js"></script>
   </body>
