--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <input :value="name" />
+      <input :value="name" v-model="name"/>
       <br/>
       <button @click="changeName">Change name</button>
       <h1>{{ greet() }}</h1>
