--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ message }}</h1>
+      <h1>{{ greet('morning') }}</h1>
     </div>
     <script src="app.js"></script>
   </body>
