--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ greet('morning') }}</h1>
+      <input v-bind:value="name" />
+      <h1>{{ greet() }}</h1>
     </div>
     <script src="app.js"></script>
   </body>
