--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <input v-model="name"/>
       <br/>
       <button @click="changeName">Change name</button>
-      <button @click="changeTitle">Change Title</button>
+      <h1>{{message}}</h1>
       <h1>{{ greet() }}</h1>
       <h1>Reversed name = "{{reverseName}}"</h1>
       <div @mousemove="move" id="canvas">
