Dynamic css classes

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
       <input v-model="name"/>
       <br/>
       <button @click="changeName">Change name</button>
-      <h1>{{message}}</h1>
+      <button @click="changeColor">Change color</button>
+      <h1 :class="{red: red, blue: blue, message: true}">{{message}}</h1>
       <h1>{{ greet() }}</h1>
       <h1>Reversed name = "{{reverseName}}"</h1>
       <div @mousemove="move" id="canvas">
